--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,14 @@ body {
 }
 
 .container {
-    border: 2px solid #fff;
+    border: 2px solid rgb(150, 148, 148);
     padding: 30px 40px;
     width: 40%;
     min-width: 500px;
 }
 
 .new-task-container {
-    background-color: #fff;
+    background-color: rgb(78, 72, 72);
     padding: 30px 20px;
     border-radius: 10px;
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
@@ -39,7 +39,7 @@ body {
 
 .new-task-container input:focus{
     outline: none;
-    border-color: #295c45;
+    border-color: #8e9794;
 }
 
 .new-task-button {
@@ -49,7 +49,7 @@ body {
     height: 100%;
     font-size: 1rem;
     border: none;
-    background-color: #41b883;
+    background-color: #717a76;
     color: #fff;
     padding: 12px;
     margin-left: 12px;
