--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,25 @@ body {
     width: 100%;
 }
 
+.task-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 6px;
+    margin-top: 6px;
+  }
+  
+  .task-item i {
+    background-color: #41b883;
+    color: #fff;
+    padding: 12px;
+    border-radius: 5px;
+  }
+
+  .task-item i:hover {
+    cursor: pointer;
+  }
+
 /* Utilities */
 .error {
     border: 2px solid red !important;
@@ -73,3 +92,7 @@ body {
 .error::placeholder {
     color: red;
 }
+
+.completed {
+    text-decoration: line-through;
+  }
